manipulacion del DOM desde Javascript

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Manipulacion del DOM básica</h1>
+    <h1 class="binaria">Manipulacion del DOM básica</h1>
+    <p>Parrafo con etiqueta sin nombre</p>
+    <p class="parrafo1">Párrafo con clase</p>
+    <p id="pid">Párrafo con id</p>
+    <input placeholder="Ingresa tu nombre"/>
+
     <script src="/index.js">       
     </script>
 </body>
