--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="binaria">Manipulacion del DOM básica</h1>
-    <p>Parrafo con etiqueta sin nombre</p>
-    <p class="parrafo1">Párrafo con clase</p>
-    <p id="pid">Párrafo con id</p>
-    <input placeholder="Ingresa tu nombre"/>
+    <h1>Manipulacion del DOM básica</h1>
+    
+    <input id="calculo1" placeholder="Ingresa un número"/>
+    <input id="calculo2" placeholder="Ingresa otro número"/>
+    <button id="btnCalcular" onclick="btnOnClick()">Calcular</button>
 
-    <script src="/index.js">       
+    <p id="resultado"></p>
+    <script src="/eventos.js">       
     </script>
 </body>
 </html>
