manejo de eventos en forms

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <h1>Manipulacion del DOM básica</h1>
+    <form>
+        <input id="calculo1" placeholder="Ingresa un número"/>
+        <input id="calculo2" placeholder="Ingresa otro número"/>
+        <button id="btnCalcular" type="button">Calcular</button>
     
-    <input id="calculo1" placeholder="Ingresa un número"/>
-    <input id="calculo2" placeholder="Ingresa otro número"/>
-    <button id="btnCalcular" onclick="btnOnClick()">Calcular</button>
-
+    </form>
+   
     <p id="resultado"></p>
     <script src="/eventos.js">       
     </script>
